# device_hisilicon_hispark_taurus

./: .gitattributes  .gitignore  BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  ohos.build
config/: Makefile
module_init/src/: system_init.c
sdk_linux/: BUILD.gn  build.sh  config.gni
sdk_linux/soc/ko/: load3516dv300_user
sdk_linux/soc/src/interdrv/common/cipher/mbedtls_prepare/: Makefile  hisi_mbedtls-2.16.10.patch  hisi_mbedtls-2.16.8.patch  linux.mak
sdk_linux/soc/src/interdrv/common/cipher/src/: Makefile
sdk_linux/soc/src/interdrv/common/cipher/src/drv/cipher_v1.0/osal/: drv_osal_init_linux.c
sdk_linux/soc/src/interdrv/common/cipher/src/drv/cipher_v1.0/osal/include/: drv_osal_lib_linux.h
sdk_linux/soc/src/interdrv/common/hi_irq/kernel/: hiirq.c
sdk_linux/soc/src/mpp/: Makefile.linux.param  sdk.mk
sdk_linux/soc/src/mpp/cbb/: Makefile.linux
sdk_linux/soc/src/mpp/component/hifb/: Makefile
sdk_linux/soc/src/mpp/component/hifb/src/init/linux/: hifb_init.c
sdk_linux/soc/src/mpp/component/tde/driver/src/src/: tde_ioctl.c
sdk_linux/soc/src/osal/linux/: osal_addr.c  osal_device.c  osal_proc.c  osal_timer.c
sdk_linux/soc/src/osal/linux/mmz/: cma_allocator.c  media_mem.c  mmz_userdev.c
sdk_linux/soc/src/usr/sensor/galaxycore_gc2053/: Makefile
sdk_linux/soc/src/usr/sensor/omnivision_os04b10/: Makefile
sdk_linux/soc/src/usr/sensor/omnivision_os05a/: Makefile
sdk_linux/soc/src/usr/sensor/omnivision_os05a_2L/: Makefile
sdk_linux/soc/src/usr/sensor/omnivision_os08a10/: Makefile
sdk_linux/soc/src/usr/sensor/omnivision_ov12870/: Makefile
sdk_linux/soc/src/usr/sensor/omnivision_ov2775/: Makefile
sdk_linux/soc/src/usr/sensor/omnivision_ov9284/: Makefile
sdk_linux/soc/src/usr/sensor/primesensor_ps5260_2L/: Makefile
sdk_linux/soc/src/usr/sensor/smart_sc4210/: Makefile
sdk_linux/soc/src/usr/sensor/sony_imx307/: Makefile
sdk_linux/soc/src/usr/sensor/sony_imx307_2L/: Makefile
sdk_linux/soc/src/usr/sensor/sony_imx327/: Makefile
sdk_linux/soc/src/usr/sensor/sony_imx327_2L/: Makefile
sdk_linux/soc/src/usr/sensor/sony_imx335/: Makefile
sdk_linux/soc/src/usr/sensor/sony_imx335_ForCar/: Makefile
sdk_linux/soc/src/usr/sensor/sony_imx390/: Makefile
sdk_linux/soc/src/usr/sensor/sony_imx415/: Makefile
sdk_linux/soc/src/usr/sensor/sony_imx458/: Makefile
sdk_liteos/: BUILD.gn  config.gni
sdk_liteos/board/: BUILD.gn  Makefile  target_config.h
sdk_liteos/config/: BUILD.gn  hdf.hcs
sdk_liteos/config/board/: BUILD.gn  Makefile  target_config.h
sdk_liteos/config/board/include/asm/: platform.h
sdk_liteos/config/device_info/: device_info.hcs
sdk_liteos/config/emmc/: emmc_config.hcs
sdk_liteos/config/sdio/: sdio_config.hcs
sdk_liteos/config/spi/: spi_config.hcs
sdk_liteos/mpp/: BUILD.gn
sdk_liteos/mpp/module_init/: BUILD.gn
sdk_liteos/mpp/module_init/src/: sdk_init.c  system_init.c
sdk_liteos/uboot/secureboot_release/ddr_init/drv/: ddr_training_custom.h
