# Copyright (C) 2021 Hisilicon (Shanghai) Technologies Co., Ltd. All rights reserved.

if (defined(ohos_lite)) {
  group("hispark_taurus") {
    deps = []
    if (ohos_kernel_type == "linux") {
      deps += [ "sdk_linux:hispark_taurus_sdk" ]
    }
  }
} else {
  group("hispark_taurus") {
    deps = [ "sdk_linux:hispark_taurus_sdk" ]
  }
}
