# Copyright (C) 2021 Hisilicon (Shanghai) Technologies Co., Ltd. All rights reserved.

group("sdk_liteos") {
  deps = [
    "board",
    "config",
    "drivers",
    "mpp",
  ]
}

config("public") {
  configs = [
    "board:public",
    "config:public",
    "drivers:public",
    "mpp:public",
  ]
}
